...
        case routine         = "tab_routine"
        case calendar        = "tab_calendar"
        case weather         = "tab_weather"
        case mail            = "tab_mail"
        case sentence        = "tab_sentence"
        case notification    = "tab_notification"
        case settings        = "tab_settings"
        case profile         = "tab_profile"

        var title: String {
            switch self {
            case .home:            return "Home"
            case .record:          return "Record"
...
